<resources>
    <string name="app_name">OpenSecondActivity</string>
    <string name="press_me">Press Me</string>
    <string name="edit_me">Edit me</string>
    <string name="textview">TextView</string>
    <string name="welcome_to_second_activity">Welcome to Second Activity</string>
    <string name="welcome_to_main_activity">Welcome to Main Activity</string>
    <string name="hello_world">Hello World!</string>
</resources>