<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewSA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_second_activity"
        app:layout_constraintBottom_toTopOf="@id/infoSA"
        app:layout_constraintEnd_toEndOf="@id/infoSA"
        app:layout_constraintStart_toStartOf="@id/infoSA"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/infoSA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_me"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/button_press_me_SA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="myButtonClickSA"
        android:text="@string/press_me"
        app:layout_constraintEnd_toEndOf="@id/infoSA"
        app:layout_constraintStart_toStartOf="@+id/infoSA"
        app:layout_constraintTop_toBottomOf="@id/infoSA"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>